# Z-Cred

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTION.md  DEMO_MIGRATION_SUMMARY.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_GUIDE.md  LOGIC.md  Makefile  OPTIMIZATION_SUMMARY.md  PIPELINE_ENHANCEMENT_SUMMARY.md  PROJECT_PLAN.md  README.md  ROADMAP.md  app.py  app_admin.py  app_user.py  auth.py  debug_shap_flow.py  demo_optimizations.py  final_shap_test.py  local_db.py  main.py  model_integration.py  model_pipeline.py  performance_profiler.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.sh  setup.py  setup_demo_data.py  shap_cache.py  shap_dashboard.py  start.sh  streamlit_debug_test.py  test_complete_flow.py  (+6 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
cache/shap/: xgboost_-1800945411086087895_explainer.pkl  xgboost_-4034298824050713101_explainer.pkl  xgboost_3340032906706685571_explainer.pkl
data/: applicants.db
docs/: CONTRIBUTION.md  DEMO_QUICK_REFERENCE.md  DEMO_SCENARIOS.md  DEMO_SCRIPT.md  HACKATHON_STRATEGY.md  INTEGRATION_GUIDE.md  LOGIC.md  OPTIMIZATION_SUMMARY.md  PROJECT_PLAN.md  README.md  ROADMAP.md  SCENARIO_1_RURAL_ENTREPRENEUR.md  SCENARIO_2_URBAN_GIG_WORKER.md  SCENARIO_3_SMALL_BUSINESS.md  SHAP_VISUALIZATION_GUIDE.md
scripts/: demo_optimizations.py  performance_profiler.py  run.sh  setup_demo_data.py  shap_dashboard.py
src/: __init__.py
src/apps/: __init__.py  app.py  app_admin.py  app_user.py
src/core/: __init__.py  auth.py  error_handling.py
src/database/: __init__.py  local_db.py
src/models/: __init__.py  model_integration.py  model_pipeline.py  shap_cache.py  trust_score_utils.py
src/utils/: __init__.py  profile_trust_scoring.prof_model_integration_transform_applicant_data.prof  profile_trust_scoring.prof_model_pipeline_calculate_trust_score.prof  profile_trust_scoring.prof_trust_score_utils_get_unified_trust_scores.prof
test_models/: feature_names.json  logistic_model.pkl  scaler.pkl  xgb_model.pkl
tests/: __init__.py  test_enhanced_pipeline.py  test_ml_integration.py  test_shap_validation.py  test_signup.py  test_system.py  test_unified_scoring.py
