[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "z-cred"
version = "1.0.0"
description = "Credit Risk Assessment Platform using Machine Learning and Explainable AI"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Rizzy", email = ""},
]
maintainers = [
    {name = "Rizzy", email = ""},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "streamlit==1.39.0",
    "pandas==2.2.3",
    "numpy==1.26.4",
    "scipy==1.14.1",
    "scikit-learn==1.5.2",
    "xgboost==2.1.1",
    "shap==0.46.0",
    "plotly==5.24.1",
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "bcrypt==4.2.0",
    "passlib==1.7.4",
    "python-dotenv==1.0.1",
    "joblib==1.4.2",
    "pickle5==0.0.12; python_version < '3.8'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.8.0",
]

[project.scripts]
z-cred-admin = "src.apps.app_admin:main"
z-cred-user = "src.apps.app_user:main"
z-cred = "src.apps.app:main"

[project.urls]
Homepage = "https://github.com/Rizzy1857/Z-Cred"
Documentation = "https://github.com/Rizzy1857/Z-Cred/docs"
Repository = "https://github.com/Rizzy1857/Z-Cred"
Issues = "https://github.com/Rizzy1857/Z-Cred/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yml", "*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".eggs"]
